--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-        body { overflow-x: hidden; color: #333; line-height: 1.6; }
+        html { font-size: 16px; }
+        body { overflow-x: hidden; color: #333; line-height: 1.6; background: #f8f9fa; }
         section { min-height: 100vh; width: 100%; padding: 60px 20px; }
         .container { max-width: 1400px; margin: 0 auto; }
         #hero { position: relative; display: flex; align-items: center; justify-content: center; color: white; text-align: center; background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)); }
@@ -19,13 +19,13 @@
         #table-section { background-color: #f8f9fa; display: flex; flex-direction: column; align-items: center; justify-content: center; }
         .section-title { text-align: center; margin-bottom: 40px; font-size: 2.5rem; color: #2c3e50; position: relative; }
         .section-title::after { content: ''; display: block; width: 80px; height: 4px; background: #4CAF50; margin: 15px auto; border-radius: 2px; }
-        #data-table { width: 85%; border-collapse: collapse; margin-top: 20px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); border-radius: 10px; overflow: hidden; animation: slideUp 1s ease-out; }
+        #data-table { width: 100%; border-collapse: collapse; margin-top: 20px; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); border-radius: 10px; overflow: hidden; animation: slideUp 1s ease-out; background: #fff; }
         #data-table th, #data-table td { padding: 15px 20px; text-align: left; border-bottom: 1px solid #e0e0e0; }
         #data-table th { background-color: #4CAF50; color: white; font-weight: 600; text-transform: uppercase; font-size: 0.9rem; letter-spacing: 1px; }
         #data-table tr:nth-child(even) { background-color: #f2f2f2; }
         #data-table tr:last-child td { border-bottom: none; }
         #data-table tr:hover { background-color: #e9e9e9; }
-        #gallery { background-color: #e9f5ff; padding: 60px 20px; }
+        #gallery { background-color: #e9f5ff; padding: 60px 0; }
         .search-container { position: relative; display: flex; justify-content: center; margin-bottom: 25px; width: 100%; max-width: 800px; margin-left: auto; margin-right: auto; }
         #search-bar { width: 100%; padding: 15px 25px; border: 2px solid #ddd; border-radius: 30px; font-size: 1rem; outline: none; transition: all 0.3s; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); }
         #search-bar:focus { border-color: #4CAF50; box-shadow: 0 2px 15px rgba(76, 175, 80, 0.2); }
@@ -37,10 +37,10 @@
         .filter-btn { padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 30px; cursor: pointer; transition: all 0.3s; font-size: 0.95rem; font-weight: 500; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); }
         .filter-btn:hover { background-color: #45a049; transform: translateY(-2px); box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); }
         .filter-btn.active { background-color: #2E7D32; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2) inset; }
-        .gallery-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 25px; padding: 20px; }
+        .gallery-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); gap: 18px; padding: 20px; }
         .gallery-item { background: white; border-radius: 10px; overflow: hidden; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); cursor: pointer; }
         .gallery-item:hover { transform: translateY(-10px); box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15); }
-        .thumbnail { width: 100%; height: 180px; object-fit: cover; border-bottom: 1px solid #eee; }
+        .thumbnail, .gallery-item img { width: 100%; height: 180px; object-fit: cover; border-bottom: 1px solid #eee; }
         .pdf-thumbnail-container { width: 100%; height: 180px; background-color: #f8f8f8; display: flex; flex-direction: column; align-items: center; justify-content: center; position: relative; overflow: hidden; border-bottom: 1px solid #eee; }
         .pdf-thumbnail { max-width: 100%; max-height: 100%; object-fit: contain; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
         .pdf-icon-overlay { position: absolute; bottom: 10px; right: 10px; background-color: rgba(231, 76, 60, 0.9); color: white; width: 40px; height: 40px; border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 20px; }
@@ -49,42 +49,64 @@
         .item-info p { color: #777; font-size: 0.9rem; font-weight: 500; }
         .folder-tag { display: inline-block; padding: 3px 8px; background-color: #e9f5ff; color: #2c3e50; border-radius: 4px; font-size: 0.8rem; margin-top: 5px; }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100vw; height: 100vh; background-color: rgba(0, 0, 0, 0.95); overflow: auto; animation: fadeIn 0.3s; }
-        .modal-content { margin: auto; display: block; max-width: 90%; max-height: 80vh; margin-top: 5vh; animation: zoomIn 0.3s; box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3); border-radius: 5px; }
+        .modal-content { margin: auto; display: block; max-width: 90vw; max-height: 80vh; margin-top: 5vh; animation: zoomIn 0.3s; box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3); border-radius: 5px; }
         #pdf-viewer-container { width: 100%; max-width: 900px; margin: 5vh auto 0 auto; background-color: #525659; box-shadow: 0 5px 30px rgba(0,0,0,0.3); position: relative; border-radius: 10px; padding: 20px 0 10px 0; }
-        #pdf-canvas { display: block; margin: 0 auto; background: #fff; border-radius: 5px; max-width: 100%; height: auto; box-shadow: 0 5px 30px rgba(0,0,0,0.3); }
+        #pdf-canvas { display: block; margin: 0 auto; background: #fff; border-radius: 5px; max-width: 100vw; width: 100%; height: auto; box-shadow: 0 5px 30px rgba(0,0,0,0.3); }
         .close { position: fixed; top: 25px; right: 35px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; transition: color 0.2s; z-index: 2000; background: rgba(0,0,0,0.5); border-radius: 50%; width: 48px; height: 48px; display: flex; align-items: center; justify-content: center; }
         .close:hover { color: #f1f1f1; background: rgba(0,0,0,0.8); }
         .caption { margin: 15px auto; display: block; width: 80%; text-align: center; color: #ccc; padding: 10px 0; font-size: 1.1rem; }
         .loading { display: flex; justify-content: center; align-items: center; height: 200px; font-size: 1.2rem; color: #777; }
         .spinner { border: 4px solid rgba(0, 0, 0, 0.1); border-radius: 50%; border-top: 4px solid #4CAF50; width: 40px; height: 40px; animation: spin 1s linear infinite; margin-right: 15px; }
-        .pdf-controls { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); background-color: rgba(0,0,0,0.7); padding: 10px 20px; border-radius: 30px; display: flex; gap: 15px; z-index: 1001; }
-        .pdf-control-btn { background: none; border: none; color: white; font-size: 18px; cursor: pointer; padding: 5px 10px; border-radius: 5px; transition: background-color 0.2s; }
-        .pdf-control-btn:hover { background-color: rgba(255,255,255,0.2); }
-        .zoom-level { color: white; font-size: 16px; min-width: 50px; text-align: center; display: flex; align-items: center; justify-content: center; }
+        .pdf-controls { position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%); background-color: rgba(0,0,0,0.85); padding: 10px 10px; border-radius: 30px; display: flex; gap: 10px; z-index: 1001; box-sizing: border-box; max-width: 98vw; overflow-x: auto; }
+        .pdf-control-btn { background: none; border: none; color: white; font-size: 22px; cursor: pointer; padding: 10px 12px; border-radius: 8px; transition: background-color 0.2s; min-width: 44px; min-height: 44px; display: flex; align-items: center; justify-content: center; }
+        .pdf-control-btn:active, .pdf-control-btn:focus { background-color: rgba(255,255,255,0.2); outline: none; }
+        .zoom-level, #page-num { color: white; font-size: 18px; min-width: 50px; text-align: center; display: flex; align-items: center; justify-content: center; }
         .pdf-loading { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 1.2rem; text-align: center; }
         .pdf-loading .spinner { border: 4px solid rgba(255,255,255,0.3); border-radius: 50%; border-top: 4px solid #4CAF50; width: 40px; height: 40px; animation: spin 1s linear infinite; margin: 0 auto 15px; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
         @keyframes slideUp { from { opacity: 0; transform: translateY(50px); } to { opacity: 1; transform: translateY(0); } }
         @keyframes zoomIn { from { transform: scale(0.9); } to { transform: scale(1); } }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-        @media (max-width: 1200px) { #pdf-viewer-container { max-width: 98vw; } }
-        @media (max-width: 768px) {
-            .hero-content h1 { font-size: 2.5rem; }
-            .hero-content p { font-size: 1.1rem; }
-            .section-title { font-size: 2rem; }
-            #data-table { width: 95%; font-size: 0.9rem; }
-            #data-table th, #data-table td { padding: 12px 15px; }
-            .gallery-container { grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); }
-            .pdf-controls { width: 90%; overflow-x: auto; padding: 10px; gap: 10px; }
+        @media (max-width: 900px) {
+            #pdf-viewer-container { max-width: 99vw; }
         }
-        @media (max-width: 480px) {
-            section { padding: 40px 15px; }
-            .hero-content { padding: 30px 20px; }
+        @media (max-width: 600px) {
+            html { font-size: 14px; }
+            section { padding: 30px 5px; }
+            .hero-content { padding: 20px 5px; }
             .hero-content h1 { font-size: 2rem; }
-            .section-title { font-size: 1.8rem; }
-            .filter-buttons { gap: 10px; }
-            .filter-btn { padding: 8px 15px; font-size: 0.85rem; }
-            .gallery-container { grid-template-columns: 1fr; }
+            .hero-content p { font-size: 1rem; }
+            .section-title { font-size: 1.5rem; }
+            #data-table th, #data-table td { padding: 10px 8px; font-size: 0.9rem; }
+            #data-table { font-size: 0.9rem; }
+            .gallery-container { grid-template-columns: 1fr; gap: 10px; padding: 10px; }
+            .thumbnail, .gallery-item img, .pdf-thumbnail-container { height: 120px; }
+            #pdf-viewer-container {
+                max-width: 100vw;
+                margin: 0;
+                border-radius: 0;
+                padding: 10px 0 5px 0;
+            }
+            .modal-content { max-width: 99vw; max-height: 70vh; }
+            .close { top: 10px; right: 10px; font-size: 32px; width: 38px; height: 38px; }
+            .pdf-controls {
+                bottom: 0;
+                left: 0;
+                right: 0;
+                transform: none;
+                border-radius: 0;
+                max-width: 100vw;
+                padding: 8px 2px;
+                gap: 5px;
+                justify-content: center;
+            }
+            .pdf-control-btn { font-size: 20px; min-width: 38px; min-height: 38px; }
+            .zoom-level, #page-num { font-size: 15px; min-width: 36px; }
+        }
+        @media (max-width: 400px) {
+            html { font-size: 12px; }
+            .gallery-container { gap: 5px; }
+            .thumbnail, .gallery-item img, .pdf-thumbnail-container { height: 80px; }
         }
     </style>
 </head>
@@ -203,6 +225,10 @@
         const captionText = document.getElementById('caption');
         const closeBtn = document.getElementById('modal-close-btn');
         let pdfDoc = null, pageNum = 1, pageRendering = false, pageNumPending = null, scale = 1.0, maxScale = 3.0, minScale = 0.5;
+
+        function isMobile() {
+            return window.innerWidth <= 600 || /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent);
+        }
 
         async function fetchDocumentsFromGitHub() {
             try {
@@ -427,7 +453,7 @@
             document.querySelector('.pdf-loading').style.display = 'block';
             document.getElementById('pdf-canvas').style.display = 'none';
             pageNum = 1;
-            scale = 1.0;
+            scale = isMobile() ? 1.6 : 1.0;
             pdfjsLib.getDocument(url).promise.then(function(pdfDoc_) {
                 pdfDoc = pdfDoc_;
                 document.getElementById('page-num').textContent = `1/${pdfDoc.numPages}`;
