--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Portfolio</title>
+    <title>Satviki Patidar | Indore | Neuro</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
     <style>
@@ -114,14 +114,17 @@
     <!-- First Section - Hero with Photo Background -->
     <section id="hero">
         <div class="hero-content">
-            <h1>Dr. Researcher</h1>
-            <p>Biomedical Research Scientist</p>
-            <p>Specializing in tissue-based, blood-based, and MRI diagnostics</p>
+            <h1>Satviki Patidar</h1>
+            <p>Please use the search option to search specific report.</p>
+            <p>You can select any specific category also for report/details by cliking that button like tissue-based, blood-based, MRI etc</p>
+            <p>You may click on any report/image and zoom or download it , or close it and view others.</p>
+            <p>At the end , there is a section for google drive folder which has some more files,dicom etc.</p>
+            <p>Feel free to contact +91-8826533558 for any further details.</p>
         </div>
     </section>
     <!-- Second Section - Table -->
     <section id="table-section">
-        <h2 class="section-title">Research Publications</h2>
+        <h3 class="section-title">Tissue Based Report Brief summary</h3>
         <table id="data-table">
             <thead>
                 <tr>
