added google drive section

--- a/index.html
+++ b/index.html
@@ -194,6 +194,23 @@
         </div>
         <div class="gallery-container" id="gallery-container"></div>
     </section>
+    <!-- Fourth Section - Google Drive Folder -->
+    <section id="google-drive-folder" style="background-color: #ebeff2; padding: 60px 20px;">
+      <div class="container">
+        <h2 class="section-title">Google Drive Files</h2>
+        <p style="text-align: center; margin-bottom: 30px; color: #2c3e50; font-size: 1.1rem;">
+          Below is a view of additional files (e.g., DICOM, reports) stored in the public Google Drive folder.
+        </p>
+        <div style="display: flex; justify-content: center;">
+          <iframe 
+            src="https://drive.google.com/embeddedfolderview?id=1Z5QDCY0OsVRApW0kIwExpQVNNkrwQZiP#grid" 
+            style="width: 100%; max-width: 1000px; height: 600px; border: 2px solid #4CAF50; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+          </iframe>
+        </div>
+      </div>
+    </section>
+
+
     <!-- Modal for expanded view -->
     <div id="myModal" class="modal">
         <span class="close" id="modal-close-btn">&times;</span>
