updated tata ich table

--- a/index.html
+++ b/index.html
@@ -216,67 +216,115 @@ body {
 <thead>
 <tr>
 <th>IHC Marker</th>
-<th>First Report</th>
-<th>Second Report</th>
-<th>Comment</th>
+<th>Dr Anita-COP Report</th>
+<th>Tata Memorial</th>
+<th>Neuberg Supratech</th>
 </tr>
 </thead>
-<tbody>
-<tr>
-<td><strong>IDH1 R132H</strong></td>
-<td>Negative</td>
-<td>Negative</td>
-<td>Consistent (IDH-wildtype)</td>
-</tr>
-<tr>
-<td><strong>ATRX</strong></td>
-<td>Retained</td>
-<td>Partially retained</td>
-<td><strong>Discrepancy</strong>; partial retention may suggest mutation or mosaic pattern—needs clarification or repeat testing</td>
-</tr>
-<tr>
-<td><strong>p53</strong></td>
-<td>Variable intensity in ~15%</td>
-<td>Focal weak, wild-type expression</td>
-<td>Roughly similar—no strong overexpression</td>
-</tr>
-<tr>
-<td><strong>Ki-67 / MIB-1</strong></td>
-<td>1–2%</td>
-<td>&lt; 1%</td>
-<td>Both show <strong>very low proliferation</strong>, consistent with low-grade tumor</td>
-</tr>
-<tr>
-<td><strong>Olig-2</strong></td>
-<td>Positive</td>
-<td>Negative</td>
-<td><strong>Discrepancy</strong> – Olig-2 is usually positive in glial tumors; one report says yes, the other says no</td>
-</tr>
-<tr>
-<td><strong>GFAP, S100</strong></td>
-<td>Not mentioned</td>
-<td>Positive</td>
-<td>Support glial origin</td>
-</tr>
-<tr>
-<td><strong>SOX10</strong></td>
-<td>Not mentioned</td>
-<td>Positive</td>
-<td>Common in glial and some schwannian tumors</td>
-</tr>
-<tr>
-<td><strong>Synaptophysin, Chromogranin</strong></td>
-<td>Not mentioned / not significant</td>
-<td>Synaptophysin positive, Chromogranin negative</td>
-<td>Synaptophysin positivity can sometimes appear in glial tumors, especially pediatric or mixed lineages</td>
-</tr>
-<tr>
-<td><strong>CD34, TTF1, H3K27M, BRAF</strong></td>
-<td>Not mentioned or negative</td>
-<td>All negative</td>
-<td></td>
-</tr>
-</tbody>
+ <tbody>
+    <tr>
+      <td>Tumor Morphology</td>
+      <td>Astrocytic morphology, glial tumor</td>
+      <td>Glial tumor</td>
+      <td>Low-grade glial neoplasm</td>
+    </tr>
+    <tr>
+      <td>Cellularity & Pleomorphism</td>
+      <td>Increased cellularity & nuclear pleomorphism</td>
+      <td>Not mentioned</td>
+      <td>Not mentioned</td>
+    </tr>
+    <tr>
+      <td>Mitosis</td>
+      <td>Inconspicuous</td>
+      <td>Not mentioned</td>
+      <td>Not seen</td>
+    </tr>
+    <tr>
+      <td>Necrosis</td>
+      <td>Not seen</td>
+      <td>Not mentioned</td>
+      <td>Not seen</td>
+    </tr>
+    <tr>
+      <td>Microvascular Proliferation</td>
+      <td>Not seen</td>
+      <td>Not mentioned</td>
+      <td>Not seen</td>
+    </tr>
+    <tr>
+      <td>Olig2</td>
+      <td>Positive</td>
+      <td>Positive</td>
+      <td>Negative</td>
+    </tr>
+    <tr>
+      <td>IDH1 R132H</td>
+      <td>Negative</td>
+      <td>Negative</td>
+      <td>Negative</td>
+    </tr>
+    <tr>
+      <td>ATRX</td>
+      <td>Retained</td>
+      <td>Retained</td>
+      <td>Partially retained nuclear expression</td>
+    </tr>
+    <tr>
+      <td>H3K27me3</td>
+      <td>Retained</td>
+      <td>Underexpressed</td>
+      <td>Not tested</td>
+    </tr>
+    <tr>
+      <td>H3K27M</td>
+      <td>Not tested</td>
+      <td>Negative</td>
+      <td>Negative</td>
+    </tr>
+    <tr>
+      <td>EZHIP</td>
+      <td>Not tested</td>
+      <td>Negative</td>
+      <td>Not tested</td>
+    </tr>
+    <tr>
+      <td>P53</td>
+      <td>~15% cells, variable intensity</td>
+      <td>Few cells positive (wild-type pattern)</td>
+      <td>Focal weak (wild-type pattern)</td>
+    </tr>
+    <tr>
+      <td>Ki-67 / MIB-1</td>
+      <td>1–2%</td>
+      <td>3–5% in highest proliferating areas</td>
+      <td>&lt; 1%</td>
+    </tr>
+    <tr>
+      <td>GFAP, S100, Synaptophysin, SOX10</td>
+      <td>Not tested</td>
+      <td>Not mentioned</td>
+      <td>All positive</td>
+    </tr>
+    <tr>
+      <td>Chromogranin, CD34, TTF1</td>
+      <td>Not tested</td>
+      <td>Not tested</td>
+      <td>All negative</td>
+    </tr>
+    <tr>
+      <td>MTAP</td>
+      <td>Not tested</td>
+      <td>Positive</td>
+      <td>Not tested</td>
+    </tr>
+    <tr>
+      <td>p16</td>
+      <td>Not tested</td>
+      <td>Many cells positive</td>
+      <td>Not tested</td>
+    </tr>
+  </tbody>
 </table>
 </section>
 <!-- Third Section - Gallery -->
