--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@ body {
 <td>Negative</td>
 <td>MGMT Promoter methylation</td>
 </tr>
+<tr>
+<td><strong>Germline NF1 NF2</strong></td>
+<td>Negative</td>
+<td>Germline NF1 NF2 (Neurofibromatosis)</td>
+</tr>
 </tbody>
 </table></div>
 <table id="data-table">
