--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body {
 }
 </style>
 </head>
-<body><nav id="navbar" style="position: fixed; top: 0; left: 0; width: 100%; background-color: #4CAF50; color: white; z-index: 1000; box-shadow: 0 2px 5px rgba(0,0,0,0.1);"><div class="container" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; flex-wrap: wrap;"><div style="font-weight: bold; font-size: 1.2rem;">Satviki Patidar</div><div style="display: flex; gap: 15px; flex-wrap: wrap;"><a class="navbar-link" href="#hero">Home</a><a class="navbar-link" href="#table-section">Tissue analysis Summary</a><a class="navbar-link" href="#gallery">Reports &amp; Docs</a><a class="navbar-link" href="timeline/timeline.html">TimeLine &amp; Docs</a> <a class="navbar-link" href="https://github.com/paraspatidar/satviki/blob/main/other/CaseHistory_2023_tilldate.pdf">CaseHistory &amp; Docs</a><a class="navbar-link" href="#google-drive-folder">Google Drive</a></div></div></nav>
+<body><nav id="navbar" style="position: fixed; top: 0; left: 0; width: 100%; background-color: #4CAF50; color: white; z-index: 1000; box-shadow: 0 2px 5px rgba(0,0,0,0.1);"><div class="container" style="display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; flex-wrap: wrap;"><div style="font-weight: bold; font-size: 1.2rem;">Satviki Patidar</div><div style="display: flex; gap: 15px; flex-wrap: wrap;"><a class="navbar-link" href="#hero">Home</a><a class="navbar-link" href="#table-section">Tissue analysis Summary</a><a class="navbar-link" href="#gallery">Reports &amp; Docs</a><a class="navbar-link" href="timeline/timeline.html">TimeLine</a> <a class="navbar-link" href="http://raw.githubusercontent.com/paraspatidar/satviki/main/other/CaseHistory_2023_tilldate.pdf">CaseHistory</a><a class="navbar-link" href="#google-drive-folder">Google Drive</a></div></div></nav>
 <!-- First Section - Hero with Photo Background -->
 <section id="hero">
 <div class="hero-content">
@@ -715,5 +715,6 @@ body {
 </section>
 </body>
 </html>
+
 
 
